update rocketmq